@@ -882,15 +882,33 @@ typedef struct
 } BY_HANDLE_FILE_INFORMATION ;
 
 
-typedef struct _SYSTEM_POWER_STATUS
-{
-  BOOL16  ACLineStatus;
-  BYTE    BatteryFlag;
-  BYTE    BatteryLifePercent;
-  BYTE    reserved;
-  DWORD   BatteryLifeTime;
-  DWORD   BatteryFullLifeTime;
-} SYSTEM_POWER_STATUS, *LPSYSTEM_POWER_STATUS;
+/* Power Management functions */
+
+#define AC_LINE_OFFLINE                 0x00
+#define AC_LINE_ONLINE                  0x01
+#define AC_LINE_BACKUP_POWER            0x02
+#define AC_LINE_UNKNOWN                 0xFF
+
+#define BATTERY_FLAG_HIGH               0x01
+#define BATTERY_FLAG_LOW                0x02
+#define BATTERY_FLAG_CRITICAL           0x04
+#define BATTERY_FLAG_CHARGING           0x08
+#define BATTERY_FLAG_NO_BATTERY         0x80
+#define BATTERY_FLAG_UNKNOWN            0xFF
+
+#define BATTERY_PERCENTAGE_UNKNOWN      0xFF
+
+#define BATTERY_LIFE_UNKNOWN        0xFFFFFFFF
+
+typedef struct _SYSTEM_POWER_STATUS {
+    BYTE ACLineStatus;
+    BYTE BatteryFlag;
+    BYTE BatteryLifePercent;
+    BYTE Reserved1;
+    DWORD BatteryLifeTime;
+    DWORD BatteryFullLifeTime;
+}   SYSTEM_POWER_STATUS, *LPSYSTEM_POWER_STATUS;
+
 
 typedef struct _MEMORY_BASIC_INFORMATION
 {
